# python-package-template

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter.json  findandreplace.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.dependabot/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: question.md  security.md
.github/workflows/: build.yml  codeql-analysis.yml  greetings.yml  release-drafter.yml  test.yml
.logs/: complexity.txt  mypy.txt  pylint-log.txt  safety.txt
.shell/: badges.sh  complexity.sh  cov.sh  dependencies.sh  docstring.sh  maintainability.sh  mypy.sh  pre-commits.sh  pylint.sh  safety.sh
docs/: console_script_setup.md  faq.md  history.md  pypi_release_checklist.md  tutorial.md
hooks/: post_gen_project.py  pre_gen_project.py
references/: REFERENCES.md  readme-TezRomacH.md  readme-waynerv.md
scripts/: findandreplace.py
tests/: __init__.py  test_utils.py
tests/test_example/: test_pass.py
{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  setup.cfg
{{ cookiecutter.project_name }}/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
{{ cookiecutter.project_name }}/.github/ISSUE_TEMPLATE/: bug_report.md  question.md  security.md
{{ cookiecutter.project_name }}/.github/workflows/: build.yml  greetings.yml  release-drafter.yml
{{ cookiecutter.project_name }}/_licences/: apache.txt  bsd3.txt  mit.txt
{{ cookiecutter.project_name }}/docker/: Dockerfile  README.md
{{ cookiecutter.project_name }}/tests/test_example/: test_hello.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: __init__.py  __main__.py  example.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name.lower().replace('-', '_') }}/: __main__.py  __version__.py  example.py
{{ cookiecutter.project_name }}/{{cookiecutter.project_name.lower().replace('-', '_')}}/: example.py
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/: .bumpversion.cfg  .pre-commit-config.yaml  Makefile  setup.cfg
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/.github/: dependabot.yml
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/.github/workflows/: build.yml  release.yml
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/docker/: README.md
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: __init__.py
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml  setup.cfg
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/.github/ISSUE_TEMPLATE/: question.md
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/.github/workflows/: build.yml  greetings.yml  preview.yml  publish-to-pypi.yml  release-drafter.yml  release.yml
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/.logs/: coverage.txt  dependencies.txt  docstring.txt  maintainability.txt  pylint-log.txt  safety.txt
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/.shell/: complexity.sh  cov.sh  docstring.sh  maintainability.sh  mypy.sh  pylint.sh
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/_licences/: apache.txt  mit.txt  proprietary.txt
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/_licenses/: bsd3.txt  proprietary.txt
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/docker/: Dockerfile
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/docs/: api.md  usage.md
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/src/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: __init__.py  __main__.py  example.py
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/tests/test_example/: test_hello.py
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: __init__.py  __main__.py
