# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-package-template"
version = "0.1.8"
description = "Cookiecutter template for Python cli/packages"
readme = "README.md"
authors = ["Roman Tezikov <tez.romach@gmail.com>"]
license = "MIT"
repository = "https://github.com/TezRomacH/python-package-template"
homepage = "https://github.com/TezRomacH/python-package-template"
keywords = ["cookiecutter", "template", "packages", "black"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = []

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]
darglint = "^1.8.0"
isort = "^5.9.1"
pyupgrade = "^2.19.4"
black = "^21.6b0"
mypy = "^0.910"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.4"
pylint = "^2.8.3"
pydocstyle = "^6.1.1"
pre-commit = "^2.13.0"

[tool.black]
# https://github.com/psf/black
line-length = 100
target-version = ["py37"]
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 37
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
# mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.7
pretty = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
